put crime framework in place for p3

--- a/app/views/solicitor/application-task-list-with-means-merit-legal-rep-declarations.html
+++ b/app/views/solicitor/application-task-list-with-means-merit-legal-rep-declarations.html
@@ -436,7 +436,7 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    {% if data['applicationType'] == 'Civil' %}<a class="govuk-c-back-link" href="merits-final-declaration">Back</a>{% else %}<a class="govuk-c-back-link" href="interests-of-justice-1">Back</a>{% endif %}
+    <a class="govuk-c-back-link" href="declarations-1">Back</a>
 
     <p class="govuk-body"></p>
 
@@ -503,19 +503,19 @@
                 </a>
               </li>
               <li class="task-list-item">
-                <a class="task-name" href="legal-representation-1">
+                <a class="task-name" href="">
                     Legal representation
                   </a>
                 <a class="govuk-link" href="">
-                  <!-- <strong class="task-incomplete" id="other-1-completed">Start</strong> -->
+                  <strong class="task-completed" id="other-1-completed">Completed</strong>
                 </a>
               </li>
               <li class="task-list-item">
-                <a class="task-name" href="">
+                <a class="task-name" href="declarations-1">
                     Declarations
                   </a>
                 <a class="govuk-link" href="">
-                  <!-- <strong class="task-incomplete" id="other-1-completed">Start</strong> -->
+                  <strong class="task-completed" id="other-1-completed">Completed</strong>
                 </a>
               </li>
 
