--- a/app/views/solicitor/application-tasklist-with-means-merits-evidence.html
+++ b/app/views/solicitor/application-tasklist-with-means-merits-evidence.html
@@ -479,14 +479,43 @@
                   <strong class="task-completed" id="other-1-completed">Completed</strong>
                 </a>
               </li>
+              {% if data['applicationType'] == 'Civil' %}
               <li class="task-list-item">
                 <a class="task-name" href="">
-                        Merit assessment
+                    Merit assessment
+                  </a>
+                <a class="govuk-link" href="">
+                  <strong class="task-completed" id="other-1-completed">Completed</strong>
+                </a>
+              </li>
+              {% else %}
+
+              <li class="task-list-item">
+                <a class="task-name" href="">
+                    Interests of justice
+                  </a>
+                <a class="govuk-link" href="">
+                  <strong class="task-completed" id="other-1-completed">Completed</strong>
+                </a>
+              </li>
+              <li class="task-list-item">
+                <a class="task-name" href="">
+                    Legal representation
                 </a>
                 <a class="govuk-link" href="">
                   <strong class="task-completed" id="other-1-completed">Completed</strong>
                 </a>
               </li>
+              <li class="task-list-item">
+                <a class="task-name" href="declarations-1">
+                    Declarations
+                  </a>
+                <a class="govuk-link" href="">
+                  <strong class="task-completed" id="other-1-completed">Completed</strong>
+                </a>
+              </li>
+
+              {% endif %}
               <li class="task-list-item">
                 <a class="task-name" href="">
                         Submit evidence
