--- a/app/views/solicitor/benefits-result.html
+++ b/app/views/solicitor/benefits-result.html
@@ -35,15 +35,17 @@
           </div>
           <h3>Your client's tax and benefits status</h3>
           <br>
-          <p class="govuk-body">
-            Your client does not receive benefits that qualify for legal aid.</p>
-          <!--p class="govuk-body">
-            Your client's gross income is under £2,657.00 a month</p-->
+          <p class="govuk-body">Your client does not receive benefits that qualify for legal aid.</p>
+
+          {% if data['applicationType'] == 'Civil' %}
+          <p class="govuk-body">Your client's gross income is under £2,657.00 a month</p>
+          {% else %}
+          <p class="govuk-body">Your client's gross income is over £1,860.00 a month</p>
+          {% endif %}
 
           <h3>What to do next</h3>
           <br>
-          <p class="govuk-body">
-            Your client will have to complete a financial means assessment. They can complete the financial assessment online from home or another location.</p>
+          <p class="govuk-body">Your client will have to complete a financial means assessment. They can complete the financial assessment online from home or another location.</p>
 
 
           <form class="form" action="online-banking" method="post">
