--- a/app/views/solicitor/means-result.html
+++ b/app/views/solicitor/means-result.html
@@ -22,8 +22,14 @@
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
         <h2>Provisional result</h2>
-        <br>
+        </br>
+
+        {% if data['applicationType'] == 'Civil' %}
+
         <div class="govuk-c-panel govuk-c-panel--confirmation govuk-!-mb-r6" style="background-color:#ffbf00">
+          <h2 class="govuk-c-panel__body">
+            Contributions due:
+          </h2>
           <br>
           <h2 class="govuk-c-panel__title">
             £177.15 a month
@@ -33,11 +39,26 @@
           </div>
         </div>
 
+        {% else %}
+
+        <div class="govuk-c-panel govuk-c-panel--confirmation govuk-!-mb-r6" style="background-color:#ffbf00">
+          <h2 class="govuk-c-panel__body">
+            Contributions due:
+          </h2>
+          <br>
+          <h2 class="govuk-c-panel__title">
+             £255.00 a month for six months
+           </h2>
+          <div class="govuk-c-panel__body">
+            or a £1275.00 lump sum
+          </div>
+        </div>
+
+        {% endif %}
+
         <h3 class="govuk-heading">
           Breakdown of provisional result
         </h2></br>
-
-        <form class="form" action="/crime-remote/mandatory-evidence" method="post">
 
           <div>
             <table class="govuk-c-table--two-thirds" style="border-spacing:0">
@@ -69,11 +90,15 @@
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric" style="border-width:thick;">£2,870.00</td>
                   <td class="govuk-c-table__cell" style="border-width:thick;"></td>
                 </tr>
+
+                {% if data['applicationType'] == 'Civil' %}
                 <tr class="govuk-c-table__row">
                   <th class="govuk-c-table__header" style="border-width:thick;">Total capital limit</th>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric" style="border-width:thick;">£8,000.00</td>
                   <td class="govuk-c-table__cell" style="border-width:thick;"></td>
                 </tr>
+                {% endif %}
+
             </table>
           </div>
           </br>
@@ -103,11 +128,31 @@
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric" style="border-width:thick;">£2,495.00</td>
                   <td class="govuk-c-table__cell" style="border-width:thick;"></td>
                 </tr>
+
+                {% if data['applicationType'] == 'Civil' %}
+
                 <tr class="govuk-c-table__row">
                   <th class="govuk-c-table__header" style="border-width:thick;">Gross income limit</th>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric" style="border-width:thick;">£2,657.00</td>
                   <td class="govuk-c-table__cell" style="border-width:thick;"></td>
                 </tr>
+
+                {% else %}
+
+                <tr class="govuk-c-table__row">
+                  <th class="govuk-c-table__header" style="border-width:thick;">Gross income lower threshold</th>
+                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric" style="border-width:thick;">£1,039.00</td>
+                  <td class="govuk-c-table__cell" style="border-width:thick;"></td>
+                </tr>
+                <tr class="govuk-c-table__row">
+                  <th class="govuk-c-table__header" style="border-width:thick;">Gross income upper threshold</th>
+                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric" style="border-width:thick;">£1,860.00</td>
+                  <td class="govuk-c-table__cell" style="border-width:thick;"></td>
+                </tr>
+
+
+                {% endif %}
+
             </table>
           </div>
           </br>
@@ -142,18 +187,31 @@
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric" style="border-width:thick;">£695.00</td>
                   <td class="govuk-c-table__cell" style="border-width:thick;"></td>
                 </tr>
+
+                {% if data['applicationType'] == 'Civil' %}
+
                 <tr class="govuk-c-table__row">
                   <th class="govuk-c-table__header" style="border-width:thick;">Disposable income limit</th>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric" style="border-width:thick;">£733.00</td>
                   <td class="govuk-c-table__cell" style="border-width:thick;"></td>
                 </tr>
+
+                {% else %}
+
+                <tr class="govuk-c-table__row">
+                  <th class="govuk-c-table__header" style="border-width:thick;">Disposable income limit</th>
+                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric" style="border-width:thick;">£283.00</td>
+                  <td class="govuk-c-table__cell" style="border-width:thick;"></td>
+                </tr>
+
+                {% endif %}
+
             </table>
           </div>
           </br>
 
-          <a class="govuk-c-button govuk-c-button" href="/solicitor/application-task-list-with-means" role="button">Continue</a>&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="govuk-c-button govuk-c-button" href="application-task-list-with-means" role="button">Continue</a>
 
-        </form>
       </div>
     </div>
   </main>
