--- a/app/views/solicitor/task-list-basic-details.html
+++ b/app/views/solicitor/task-list-basic-details.html
@@ -20,136 +20,192 @@
       <div class="govuk-o-grid">
         <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
           <p></p>
-          <h2 class="govuk-heading-xl">Check your client's details</h2>
+          <h2 class="govuk-heading-l">Client details</h2>
+          <dl class="govuk-check-your-answers cya-questions" style="width:600px">
+            <div>
+              <dt class="cya-question" style="width:275px">Application type</dt>
+              <dd class="cya-answer">{{ data['applicationType'] }}</dd>
+              <dd class="cya-change">
+                <a class="govuk-link" href="application-type">
+                  Change<span class="visually-hidden">type</span>
+                </a>
+              </dd>
+            </div>
 
-          <form class="form" action="confirm-contact" method="post">
+            {% if data['applicationType'] == 'Civil' %}
+            <div>
+              <dt class="cya-question" style="width:275px">Category of law</dt>
+              <dd class="cya-answer">{{ data['category'] }}</dd>
+              <dd class="cya-change">
+                <a class="govuk-link" href="category-law-civil">
+                  Change<span class="visually-hidden">type</span>
+                </a>
+              </dd>
+            </div>
+            {% else %}
+            <div>
+              <dt class="cya-question" style="width:275px">Case type</dt>
+              <dd class="cya-answer">{{ data['case-type'] }}</dd>
+              <dd class="cya-change">
+                <a class="govuk-link" href="case-type-crime">
+                  Change<span class="visually-hidden">type</span>
+                </a>
+              </dd>
+            </div>
+            {% endif %}
 
-            <h2 class="govuk-heading-l">Client details</h2>
-            <dl class="govuk-check-your-answers cya-questions" style="width:600px">
-              <div>
-                <dt class="cya-question" style="width:275px">Application type</dt>
-                <dd class="cya-answer">{{ data['applicationType'] }}</dd>
-                <dd class="cya-change">
-                  <a class="govuk-link" href="application-type">
-                    Change<span class="visually-hidden">type</span>
-                  </a>
-                </dd>
-              </div>
+            <div>
+              <dt class="cya-question">Name</dt>
+              <dd class="cya-answer">{{ data['name'] }}</dd>
+              <dd class="cya-change">
+                <a class="govuk-link" href="basic-details">
+                  Change<span class="visually-hidden">name</span>
+                </a>
+              </dd>
+            </div>
 
-              {% if data['applicationType'] == 'Civil' %}
-              <div>
-                <dt class="cya-question" style="width:275px">Category of law</dt>
-                <dd class="cya-answer">{{ data['category'] }}</dd>
-                <dd class="cya-change">
-                  <a class="govuk-link" href="category-law-civil">
-                    Change<span class="visually-hidden">type</span>
-                  </a>
-                </dd>
-              </div>
-              {% endif %}
+            <div>
+              <dt class="cya-question">Date of birth</dt>
+              <dd class="cya-answer">{{ data['dob-day'] }}/{{ data['dob-month'] }}/{{ data['dob-year'] }}</dd>
+              <dd class="cya-change">
+                <a class="govuk-link" href="enter-NI">
+                  Change<span class="visually-hidden">date of birth</span>
+                </a>
+              </dd>
+            </div>
 
-              <div>
-                <dt class="cya-question">Name</dt>
-                <dd class="cya-answer">{{ data['name'] }}</dd>
-                <dd class="cya-change">
-                  <a class="govuk-link" href="basic-details">
-                    Change<span class="visually-hidden">name</span>
-                  </a>
-                </dd>
-              </div>
+            <div>
+              <dt class="cya-question">National Insurance number</dt>
+              <dd class="cya-answer">{{ data['nino'] }}</dd>
+              <dd class="cya-change">
+                <a class="govuk-link" href="enter-NI">
+                  Change<span class="visually-hidden">national insurance number</span>
+                </a>
+              </dd>
+            </div>
 
-              <div>
-                <dt class="cya-question">Date of birth</dt>
-                <dd class="cya-answer">{{ data['dob-day'] }}/{{ data['dob-month'] }}/{{ data['dob-year'] }}</dd>
-                <dd class="cya-change">
-                  <a class="govuk-link" href="enter-NI">
-                    Change<span class="visually-hidden">date of birth</span>
-                  </a>
-                </dd>
-              </div>
+            <div>
+              <dt class="cya-question">Email address</dt>
+              <dd class="cya-answer">{{ data['email']}}</dd>
+              <dd class="cya-change">
+                <a class="govuk-link" href="email-address">
+                  Change<span class="visually-hidden">email-address</span>
+                </a>
+              </dd>
+            </div>
 
-              <div>
-                <dt class="cya-question">National Insurance number</dt>
-                <dd class="cya-answer">{{ data['nino'] }}</dd>
-                <dd class="cya-change">
-                  <a class="govuk-link" href="enter-NI">
-                    Change<span class="visually-hidden">national insurance number</span>
-                  </a>
-                </dd>
-              </div>
+            {% if data['applicationType'] == 'Crime' %}
 
-              <div>
-                <dt class="cya-question">Email address</dt>
-                <dd class="cya-answer">{{ data['email']}}</dd>
-                <dd class="cya-change">
-                  <a class="govuk-link" href="email-address">
-                    Change<span class="visually-hidden">email-address</span>
-                  </a>
-                </dd>
-              </div>
-            </dl>
+            <div>
+              <dt class="cya-question">Court commenced</dt>
+              <dd class="cya-answer">{{ data['court-commenced']}}</dd>
+              <dd class="cya-change">
+                <a class="govuk-link" href="email-address">
+                  Change<span class="visually-hidden">court-crime-commenced</span>
+                </a>
+              </dd>
+            </div>
+            <div>
+              <dt class="cya-question">Court heard</dt>
+              <dd class="cya-answer">{{ data['court-heard']}}</dd>
+              <dd class="cya-change">
+                <a class="govuk-link" href="email-address">
+                  Change<span class="visually-hidden">court-crime-heard</span>
+                </a>
+              </dd>
+            </div>
+            <div>
+              <dt class="cya-question">Remanded in custody?</dt>
+              <dd class="cya-answer">{{ data['in-custody']}}</dd>
+              <dd class="cya-change">
+                <a class="govuk-link" href="email-address">
+                  Change<span class="visually-hidden">remanded</span>
+                </a>
+              </dd>
+            </div>
+            <div>
+              <dt class="cya-question">Employed?</dt>
+              <dd class="cya-answer">{{ data['employed']}}</dd>
+              <dd class="cya-change">
+                <a class="govuk-link" href="email-address">
+                  Change<span class="visually-hidden">employed</span>
+                </a>
+              </dd>
+            </div>
+            <div>
+              <dt class="cya-question">Left job in last three months?</dt>
+              <dd class="cya-answer">{{ data['unemployed-three-months']}}</dd>
+              <dd class="cya-change">
+                <a class="govuk-link" href="email-address">
+                  Change<span class="visually-hidden">unemployed-three-months</span>
+                </a>
+              </dd>
+            </div>
+            {% endif %}
 
-            </br>
+          </dl>
 
-            <h2 class="govuk-heading-l">Address</h2>
+          </br>
 
-            <dl class="govuk-check-your-answers cya-questions" style="width:600px">
+          <h2 class="govuk-heading-l">Address</h2>
 
-              <div>
-                <dt class="cya-question" style="width:275px">Number</dt>
-                <dd class="cya-answer">{{ data['address']}}</dd>
-                <dd class="cya-change">
-                  <a class="govuk-link" href="postcode">
-                    Change<span class="visually-hidden">number</span>
-                  </a>
-                </dd>
-              </div>
-              <div>
-                <dt class="cya-question">Address line 1</dt>
-                <dd class="cya-answer">Main Road</dd>
-                <dd class="cya-change">
-                  <a class="govuk-link" href="postcode">
-                    Change<span class="visually-hidden">address line 1</span>
-                  </a>
-                </dd>
-              </div>
-              <div>
-                <dt class="cya-question">Address line 2</dt>
-                <dd class="cya-answer"></dd>
-                <dd class="cya-change">
-                  <a class="govuk-link" href="postcode">
-                    Change<span class="visually-hidden">address line 2</span>
-                  </a>
-                </dd>
-              </div>
-              <div>
-                <dt class="cya-question">Town or city</dt>
-                <dd class="cya-answer">London</dd>
-                <dd class="cya-change">
-                  <a class="govuk-link" href="postcode">
-                    Change<span class="visually-hidden">city</span>
-                  </a>
-                </dd>
-              </div>
-              <div>
-                <dt class="cya-question">County</dt>
-                <dd class="cya-answer"></dd>
-                <dd class="cya-change">
-                  <a class="govuk-link" href="postcode">
-                    Change<span class="visually-hidden">county</span>
-                  </a>
-                </dd>
-              </div>
-              <div>
-                <dt class="cya-question">Postcode</dt>
-                <dd class="cya-answer">{{ data['postcode']}}</dd>
-                <dd class="cya-change">
-                  <a class="govuk-link" href="postcode">
-                    Change<span class="visually-hidden">postcode</span>
-                  </a>
-                </dd>
-              </div>
-            </dl>
+          <dl class="govuk-check-your-answers cya-questions" style="width:600px">
+
+            <div>
+              <dt class="cya-question" style="width:275px">Number</dt>
+              <dd class="cya-answer">{{ data['address']}}</dd>
+              <dd class="cya-change">
+                <a class="govuk-link" href="postcode">
+                  Change<span class="visually-hidden">number</span>
+                </a>
+              </dd>
+            </div>
+            <div>
+              <dt class="cya-question">Address line 1</dt>
+              <dd class="cya-answer">Main Road</dd>
+              <dd class="cya-change">
+                <a class="govuk-link" href="postcode">
+                  Change<span class="visually-hidden">address line 1</span>
+                </a>
+              </dd>
+            </div>
+            <div>
+              <dt class="cya-question">Address line 2</dt>
+              <dd class="cya-answer"></dd>
+              <dd class="cya-change">
+                <a class="govuk-link" href="postcode">
+                  Change<span class="visually-hidden">address line 2</span>
+                </a>
+              </dd>
+            </div>
+            <div>
+              <dt class="cya-question">Town or city</dt>
+              <dd class="cya-answer">London</dd>
+              <dd class="cya-change">
+                <a class="govuk-link" href="postcode">
+                  Change<span class="visually-hidden">city</span>
+                </a>
+              </dd>
+            </div>
+            <div>
+              <dt class="cya-question">County</dt>
+              <dd class="cya-answer"></dd>
+              <dd class="cya-change">
+                <a class="govuk-link" href="postcode">
+                  Change<span class="visually-hidden">county</span>
+                </a>
+              </dd>
+            </div>
+            <div>
+              <dt class="cya-question">Postcode</dt>
+              <dd class="cya-answer">{{ data['postcode']}}</dd>
+              <dd class="cya-change">
+                <a class="govuk-link" href="postcode">
+                  Change<span class="visually-hidden">postcode</span>
+                </a>
+              </dd>
+            </div>
+          </dl>
           </form>
         </div>
       </div>
