add crime declarations screens

--- a/app/views/solicitor/application-task-list-with-means-merit-legal-rep-declarations.html
+++ b/app/views/solicitor/application-task-list-with-means-merit-legal-rep-declarations.html
@@ -436,7 +436,7 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <a class="govuk-c-back-link" href="declarations-1">Back</a>
+    <a class="govuk-c-back-link" href="declarations-solicitor">Back</a>
 
     <p class="govuk-body"></p>
 
