--- a/app/views/solicitor/application-task-list-with-means-merit-legal-rep.html
+++ b/app/views/solicitor/application-task-list-with-means-merit-legal-rep.html
@@ -511,7 +511,7 @@
                 </a>
               </li>
               <li class="task-list-item">
-                <a class="task-name" href="declarations-1">
+                <a class="task-name" href="declarations-fraud">
                     Declarations
                   </a>
                 <a class="govuk-link" href="">
