--- a/app/views/solicitor/declarations-fraud.html
+++ b/app/views/solicitor/declarations-fraud.html
@@ -22,13 +22,16 @@
         <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
           <h2 class="govuk-heading-xl">
-            Anything to declare?
+            Fraud notice
           </h2>
 
-          <form class="form" action="application-task-list-with-means-merit-legal-rep-declarations" method="post">
+          <form class="form" action="declarations-client" method="post">
 
-            <input class="govuk-c-input govuk-!-width-two-thirds" id="declaration" name="declaration" type="text" required>
-            </br>
+            <p class="govuk-body">If false or inaccurate information is provided and fraud is identified, details will be passed to fraud prevention agencies to prevent fraud and money laundering.</p>
+
+            <p class="govuk-body">Further details explaining how the information held by fraud prevention agencies may be used can be found in the 'Fair Processing Notice', available on the <a href="http://www.justice.gov.uk/legal-aid">Legal Aid Agency website</a>.</p>
+
+
             <input class="govuk-c-button" type="submit" value="Continue">
 
           </form>
