add legal representation content

--- a/app/views/solicitor/declarations-client.html
+++ b/app/views/solicitor/declarations-client.html
@@ -82,8 +82,8 @@
 
             <div class="govuk-c-checkboxes__item">
 
-              <input class="govuk-c-checkboxes__input" id="ob" name="consent" value="ob" type="checkbox" required="yes">
-              <label class="govuk-c-label govuk-c-checkboxes__label" for="ob">
+              <input class="govuk-c-checkboxes__input" id="client-dec" name="client-dec" value="client-dec" type="checkbox" required="yes">
+              <label class="govuk-c-label govuk-c-checkboxes__label" for="client-dec">
                 <b>I have read the Declaration and Fraud Notices</b>
               </label>
             </div>
