--- a/app/views/solicitor/declarations-solicitor.html
+++ b/app/views/solicitor/declarations-solicitor.html
@@ -32,8 +32,8 @@
             <p class="govuk-body">I confirm that the applicant has not provided me with any information which contradicts the information provided in this declaration of financial circumstances and has given me no indication that information declared is incomplete or untrue.</p>
 
             <div class="govuk-c-checkboxes__item">
-              <input class="govuk-c-checkboxes__input" id="ob" name="consent" value="ob" type="checkbox" required="yes">
-              <label class="govuk-c-label govuk-c-checkboxes__label" for="ob">
+              <input class="govuk-c-checkboxes__input" id="sol-dec" name="sol-dec" value="sol-dec" type="checkbox" required="yes">
+              <label class="govuk-c-label govuk-c-checkboxes__label" for="sol-dec">
                 <b>I have read the Declaration</b>
               </label>
             </div>
