--- a/app/views/solicitor/interests-of-justice-4.html
+++ b/app/views/solicitor/interests-of-justice-4.html
@@ -15,15 +15,16 @@
 
     <main role="main" class="govuk-o-main-wrapper">
 
-      <a class="govuk-c-back-link" href="application-task-list-with-means">Back</a>
+      <a class="govuk-c-back-link" href="interests-of-justice-3">Back</a>
       <p class="govuk-body"></p>
 
       <div class="govuk-o-grid">
         <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
-          <h2 class="govuk-heading-xl">Does your client need a DBS check for their job?</h2>
+          <h2 class="govuk-heading-xl">Does your client work in a sector regulated by a professional body?</h2>
       
-          <p class="govuk-body">Jobs such as working with children under 16, a police or prison officer, need a Disclosure and Barring Service (DBS) check and you cannot work with a criminal conviction. </p>
+          <p class="govuk-body">For example, a conviction could prevent your client working in an organisation regulated by the Financial Conduct Authority (FCA).
+</p>
 
           <form class="form" action="application-task-list-with-means-merit" method="post">
 
