Added IOJ screens and removed representation from task list

--- a/app/views/solicitor/application-task-list-with-means-merit.html
+++ b/app/views/solicitor/application-task-list-with-means-merit.html
@@ -436,7 +436,7 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    {% if data['applicationType'] == 'Civil' %}<a class="govuk-c-back-link" href="merits-final-declaration">Back</a>{% else %}<a class="govuk-c-back-link" href="interests-of-justice-1">Back</a>{% endif %}
+    {% if data['applicationType'] == 'Civil' %}<a class="govuk-c-back-link" href="merits-final-declaration">Back</a>{% else %}<a class="govuk-c-back-link" href="ioj-playback">Back</a>{% endif %}
 
     <p class="govuk-body"></p>
 
@@ -503,15 +503,7 @@
                 </a>
               </li>
               <li class="task-list-item">
-                <a class="task-name" href="legal-representation-1">
-                    Legal representation
-                  </a>
-                <a class="govuk-link" href="">
-                  <!-- <strong class="task-incomplete" id="other-1-completed">Start</strong> -->
-                </a>
-              </li>
-              <li class="task-list-item">
-                <a class="task-name" href="">
+                <a class="task-name" href="declarations-fraud">
                     Declarations
                   </a>
                 <a class="govuk-link" href="">
@@ -522,7 +514,7 @@
               {% endif %}
 
               <li class="task-list-item">
-                <a class="task-name" href="declared-evidence">
+                <a class="task-name" href="">
                         Submit evidence
                 </a>
                 <a class="govuk-link" href="">
