--- a/app/views/solicitor/application-task-list-with-means.html
+++ b/app/views/solicitor/application-task-list-with-means.html
@@ -494,16 +494,8 @@
               {% else %}
 
               <li class="task-list-item">
-                <a class="task-name" href="interests-of-justice-1">
+                <a class="task-name" href="ioj-task-list">
                     Interests of justice
-                  </a>
-                <a class="govuk-link" href="">
-                  <!-- <strong class="task-incomplete" id="other-1-completed">Start</strong> -->
-                </a>
-              </li>
-              <li class="task-list-item">
-                <a class="task-name" href="">
-                    Legal representation
                   </a>
                 <a class="govuk-link" href="">
                   <!-- <strong class="task-incomplete" id="other-1-completed">Start</strong> -->
