--- a/app/views/solicitor/declarations-client.html
+++ b/app/views/solicitor/declarations-client.html
@@ -72,7 +72,7 @@
             <p class="govuk-body"><b>I understand</b> that:</p>
 
             <ul class="govuk-body">
-              <li>if I am ordered to pay towards my legal aid under an Income COntribution Order</li>
+              <li>if I am ordered to pay towards my legal aid under an Income Contribution Order</li>
               <li>or if I am convicted and ordered to pay under a Final Contribution Order</li>
             </ul>
 
