--- a/app/views/solicitor/interests-of-justice-1.html
+++ b/app/views/solicitor/interests-of-justice-1.html
@@ -15,17 +15,17 @@
 
     <main role="main" class="govuk-o-main-wrapper">
 
-      <a class="govuk-c-back-link" href="application-task-list-with-means">Back</a>
+      <a class="govuk-c-back-link" href="ioj-task-list">Back</a>
       <p class="govuk-body"></p>
 
       <div class="govuk-o-grid">
         <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
           <h2 class="govuk-heading-xl">Does your client need a DBS check for their job?</h2>
-      
+
           <p class="govuk-body">Jobs such as working with children under 16, a police or prison officer, need a Disclosure and Barring Service (DBS) check and you cannot work with a criminal conviction. </p>
 
-          <form class="form" action="application-task-list-with-means-merit" method="post">
+          <form class="form" action="interests-of-justice-2" method="post">
 
             <div class="govuk-c-radios">
               <fieldset class="govuk-c-fieldset">
