--- a/app/views/solicitor/interests-of-justice-2.html
+++ b/app/views/solicitor/interests-of-justice-2.html
@@ -22,11 +22,11 @@
         <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
           <h2 class="govuk-heading-xl">Does your client need to tell their employer about a new conviction?</h2>
-      
+
           <p class="govuk-body">Under terms of employment your client may legally have to declare convictions and could lose their job.
 </p>
 
-          <form class="form" action="application-task-list-with-means-merit" method="post">
+          <form class="form" action="interests-of-justice-3" method="post">
 
             <div class="govuk-c-radios">
               <fieldset class="govuk-c-fieldset">
