--- a/app/views/solicitor/interests-of-justice-3.html
+++ b/app/views/solicitor/interests-of-justice-3.html
@@ -22,11 +22,11 @@
         <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
           <h2 class="govuk-heading-xl">Will your client lose the licence they need for their job if convicted?</h2>
-      
+
           <p class="govuk-body">For example, your client could lose a licence to drive, operate machinery or run a licensed business.
 </p>
 
-          <form class="form" action="application-task-list-with-means-merit" method="post">
+          <form class="form" action="ioj-playback" method="post">
 
             <div class="govuk-c-radios">
               <fieldset class="govuk-c-fieldset">
