--- a/app/views/solicitor/ioj-task-list.html
+++ b/app/views/solicitor/ioj-task-list.html
@@ -436,7 +436,7 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <a class="govuk-c-back-link" href="declarations-solicitor">Back</a>
+    <a class="govuk-c-back-link" href="application-task-list-with-means">Back</a>
 
     <p class="govuk-body"></p>
 
@@ -444,83 +444,102 @@
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
         <h2 class="govuk-heading-xl">
-          Apply for legal aid
+          Interest of Justice tests
         </h2>
 
 
         <div class="govuk-c-error-summary" aria-labelledby="error-summary-title" role="alert">
           <ul class="govuk-body" style="color: #b10e1e; font-weight:800;">
-            <li>You must complete each section before you can submit the application.</li>
+            <li>Choose the area that most likely fits your client's situation first.</li>
           </ul>
         </div>
 
         <ol class="task-list">
           <li>
-            <h2 class="task-list-section">John Smith, JJ2319388</h2>
+            <h2 class="task-list-section">Choose from the following statements:</h2>
             <ul class="task-list-items">
               <li class="task-list-item">
-                <a class="task-name" href="task-list-background">
-                        Background information
+                <a class="task-name" href="">
+                        Likely to lose liberty
                 </a>
-                <a class="govuk-link" href="task-list-background">
-                  <strong class="task-completed" id="other-1-completed">Completed</strong>
-                </a>
-              </li>
-              <li class="task-list-item">
-                <a class="task-name" href="task-list-basic-details">
-                        Basic details
-                </a>
-                <a class="govuk-link" href="task-list-basic-details">
-                  <strong class="task-completed" id="other-1-completed">Completed</strong>
+                <a class="govuk-link" href="">
                 </a>
               </li>
               <li class="task-list-item">
                 <a class="task-name" href="">
-                        Means assessment
+                        Been given a suspended sentence
                 </a>
                 <a class="govuk-link" href="">
-                  <strong class="task-completed" id="other-1-completed">Completed</strong>
                 </a>
               </li>
-
-              {% if data['applicationType'] == 'Civil' %}
+              <li class="task-list-item">
+                <a class="task-name" href="interests-of-justice-1">
+                        Likely to lose my livelihood
+                </a>
+                <a class="govuk-link" href="">
+                </a>
+              </li>
               <li class="task-list-item">
                 <a class="task-name" href="">
-                    Merit assessment
+                    Likely I will suffer reputational damage
                   </a>
-                <a class="govuk-link" href="">
-                  <strong class="task-completed" id="other-1-completed">Completed</strong>
-                </a>
-              </li>
-              {% else %}
-
-              <li class="task-list-item">
-                <a class="task-name" href="">
-                    Interests of justice
-                  </a>
-                <a class="govuk-link" href="">
-                  <strong class="task-completed" id="other-1-completed">Completed</strong>
-                </a>
-              </li>
-              <li class="task-list-item">
-                <a class="task-name" href="declarations-1">
-                    Declarations
-                  </a>
-                <a class="govuk-link" href="">
-                  <strong class="task-completed" id="other-1-completed">Completed</strong>
-                </a>
-              </li>
-
-              {% endif %}
-
-              <li class="task-list-item">
-                <a class="task-name" href="declared-evidence">
-                        Submit evidence
-                </a>
                 <a class="govuk-link" href="">
                   <!-- <strong class="task-incomplete" id="other-1-completed">Start</strong> -->
                 </a>
               </li>
+
+              <li class="task-list-item">
+                <a class="task-name" href="">
+                    The case involves a substantial question of law
+                  </a>
+                <a class="govuk-link" href="">
+                  <!-- <strong class="task-incomplete" id="other-1-completed">Start</strong> -->
+                </a>
+              </li>
+
+            </li>
+            <li class="task-list-item">
+              <a class="task-name" href="">
+                    I may not be able to understand the court proceedings or present my case
+              </a>
+              <a class="govuk-link" href="">
+              </a>
+            </li>
+            <li class="task-list-item">
+              <a class="task-name" href="">
+                      Witnesses may need to be traced or interviewed on my behalf
+              </a>
+              <a class="govuk-link" href="">
+              </a>
+            </li>
+            <li class="task-list-item">
+              <a class="task-name" href="">
+                  The proceedings may involve expert cross-examination of a prosecution witness
+                </a>
+              <a class="govuk-link" href="">
+                <!-- <strong class="task-incomplete" id="other-1-completed">Start</strong> -->
+              </a>
+            </li>
+
+            <li class="task-list-item">
+              <a class="task-name" href="">
+                  It is in the interests of another person that I am represented
+                </a>
+              <a class="govuk-link" href="">
+                <!-- <strong class="task-incomplete" id="other-1-completed">Start</strong> -->
+              </a>
+            </li>
+
+            <li class="task-list-item">
+              <a class="task-name" href="">
+                  Any other reason
+                </a>
+              <a class="govuk-link" href="">
+                <!-- <strong class="task-incomplete" id="other-1-completed">Start</strong> -->
+              </a>
+            </li>
+
+
             </ul>
           </li>
         </ol>
