--- a/app/views/solicitor/paid-cash.html
+++ b/app/views/solicitor/paid-cash.html
@@ -15,7 +15,7 @@
 
     <main role="main" class="govuk-o-main-wrapper">
 
-      <a class="govuk-c-back-link" href="review-outgoings">Back</a>
+      <a class="govuk-c-back-link" href="identify-evidence">Back</a>
       <p class="govuk-body"></p>
 
       <div class="govuk-o-grid">
