Changedpanel colors from yellow to blue and fixed back button branching navigation

--- a/app/views/citizen-truelayer/national-savings.html
+++ b/app/views/citizen-truelayer/national-savings.html
@@ -14,7 +14,7 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <a class="govuk-c-back-link" href="property-amount">Back</a>
+    <a class="govuk-c-back-link" href="capital-assets">Back</a>
 
     <p class="govuk-body"></p>
 
