--- a/app/views/citizen-truelayer/property-amount.html
+++ b/app/views/citizen-truelayer/property-amount.html
@@ -14,7 +14,7 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <a class="govuk-c-back-link" href="identify-outgoings-housing-childcare">Back</a>
+    <a class="govuk-c-back-link" href="property">Back</a>
 
     <p class="govuk-body"></p>
 
