--- a/app/views/solicitor/benefits-result.html
+++ b/app/views/solicitor/benefits-result.html
@@ -23,7 +23,7 @@
           <p></p>
 
           <br>
-          <div class="govuk-c-panel govuk-c-panel--confirmation govuk-!-mb-r6" style="background-color:#ffbf00">
+          <div class="govuk-c-panel govuk-c-panel--confirmation govuk-!-mb-r6" style="background-color:#005ea5">
             <div class="govuk-c-panel__body">
               John Doe <br>will have to complete a
             </div>
