--- a/app/views/solicitor/means-result.html
+++ b/app/views/solicitor/means-result.html
@@ -26,7 +26,7 @@
 
         {% if data['applicationType'] == 'Civil' %}
 
-        <div class="govuk-c-panel govuk-c-panel--confirmation govuk-!-mb-r6" style="background-color:#ffbf00">
+        <div class="govuk-c-panel govuk-c-panel--confirmation govuk-!-mb-r6" style="background-color:#005ea5">
           <h2 class="govuk-c-panel__body">
             Contributions due:
           </h2>
@@ -41,7 +41,7 @@
 
         {% else %}
 
-        <div class="govuk-c-panel govuk-c-panel--confirmation govuk-!-mb-r6" style="background-color:#ffbf00">
+        <div class="govuk-c-panel govuk-c-panel--confirmation govuk-!-mb-r6" style="background-color:#005ea5">
           <h2 class="govuk-c-panel__body">
             Contributions due:
           </h2>
