--- a/app/views/citizen-truelayer/capital-bonds.html
+++ b/app/views/citizen-truelayer/capital-bonds.html
@@ -14,7 +14,7 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <a class="govuk-c-back-link" href="premium-bonds-amount">Back</a>
+    <a class="govuk-c-back-link" href="premium-bonds">Back</a>
 
     <p class="govuk-body"></p>
 
