--- a/app/views/citizen-truelayer/means-result.html
+++ b/app/views/citizen-truelayer/means-result.html
@@ -25,7 +25,7 @@
 
         <h1>If your case qualifies for legal aid, you will have to pay:</h1>
         <br>
-        <div class="govuk-c-panel govuk-c-panel--confirmation govuk-!-mb-r6" style="background-color:#ffbf00">
+        <div class="govuk-c-panel govuk-c-panel--confirmation govuk-!-mb-r6" style="background-color:#005ea5">
           <br>
           <h2 class="govuk-c-panel__title">
             £177.15 a month
