--- a/app/views/citizen-truelayer/other-savings.html
+++ b/app/views/citizen-truelayer/other-savings.html
@@ -14,7 +14,7 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <a class="govuk-c-back-link" href="stocks-shares-amount">Back</a>
+    <a class="govuk-c-back-link" href="stocks-shares">Back</a>
 
     <p class="govuk-body"></p>
 
