--- a/app/views/citizen-truelayer/premium-bonds.html
+++ b/app/views/citizen-truelayer/premium-bonds.html
@@ -14,7 +14,7 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <a class="govuk-c-back-link" href="national-savings-amount">Back</a>
+    <a class="govuk-c-back-link" href="capital-assets">Back</a>
 
     <p class="govuk-body"></p>
 
