Fixed a minor bug on the submit evidence link in the task list

--- a/app/views/solicitor/application-task-list-with-means-merit.html
+++ b/app/views/solicitor/application-task-list-with-means-merit.html
@@ -514,7 +514,7 @@
               {% endif %}
 
               <li class="task-list-item">
-                <a class="task-name" href="">
+                <a class="task-name" href="declared-evidence">
                         Submit evidence
                 </a>
                 <a class="govuk-link" href="">
